<resources>
    <string name="app_name">PlantYoutube</string>
    <string name="action_settings">Settings</string>
    <string name="lblGps_pause">PAUSE GPS</string>
    <string name="lblGps_resume">RESUME GPS</string>
    <string name="lblLatitude">Latitude</string>
    <string name="lblLongitude">Longitude</string>
    <string name="lblGPSAge">GPS Age</string>
    <string name="lblZero">0.0</string>
    <string name="lblPlantName">Plant Name</string>
    <string name="lblBlank" />
    <string name="lblSave">Save</string>
    <string name="lblLocation">Location</string>
    <string name="lblDescription">Description</string>
    <string name="lblShowSaved">Show Saved</string>
    <string name="lblTakePhoto">Take Photo</string>
    <string name="lblTakeNewPhoto">Take New Photo</string>
    <string name="lblOpenExistingImage">Open Existing Image</string>
    <string name="lblSearchTerm">Search term</string>
    <string name="unableToSaveSpecimen">unable to save specimen</string>
    <string name="cannotOpenCamera">cannot open camera or write to external storage</string>
</resources>
